fixed bg to make it stay behind the text

--- a/style/style.css
+++ b/style/style.css
@@ -124,7 +124,7 @@
   }
 }
 
-.border, .quiz__box__time .bg, .quiz__box__text, .quiz-btn:hover {
+.border, .quiz__box__time__inner .bg, .quiz__box__text, .quiz-btn:hover {
   border: 1px solid black;
   border-radius: 5px;
 }
@@ -161,12 +161,13 @@ body {
 }
 
 .header {
-  background-color: rgba(141, 202, 255, 0.5);
+  background-color: rgb(184, 222, 255);
   width: 100%;
   height: 80px;
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 2;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -304,11 +305,27 @@ body {
   position: relative;
   z-index: 0;
 }
-.quiz__box__time .time {
+.quiz__box__time__inner {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+.quiz__box__time__inner .time {
+  display: block;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   border: none;
   z-index: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.quiz__box__time .bg {
+.quiz__box__time__inner .bg {
   display: inline-block;
   position: absolute;
   top: 0;
@@ -373,7 +390,7 @@ body {
 .mobile_menu.inview {
   opacity: 1;
   visibility: visible;
-  z-index: 2;
+  z-index: 10;
   transform: scale(1);
   transition: all 0.3s ease;
 }
